[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sensingcluespy"
authors = [
    {name = "sensing_clues", email = "sensingclues@typemail.com"},
]
description = "Python client to extract data from SensingClues"
readme = "readme.md"
requires-python = ">=3.9"
keywords = ["wildlife", "SensingClues", "Cluey"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://sensingcluespy.readthedocs.io/en/latest/index.html"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = { file = ["requirements_dev.txt"] }
version = {attr = "sensingcluespy.__version__"}

[tool.setuptools.package-data]
sensingclues = ["extractors/*"]

[tool.setuptools.packages.find]
include = ["sensingcluespy*"]
exclude = ["docs/*", "tests/*", "notebooks/*"]

[tool.black]
line-length = 80
# Exclude everything in the .gitignore, but also:
extend-exclude = '''
/(
    notebooks
    | docs
)/
'''

[tool.isort]
profile = "black"
